<resources>
    <string name="app_name">SportNews</string>
    <string name="bbc_sports">BBCSports</string>
    <string name="talk_sports">TalkSports</string>
    <string name="fox_sports">Fox-Sports</string>
    <string name="footbal_italia">Football ITALIA</string>
    <string name="espn">ESPN</string>
    <string name="search_hint"> search news</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


</resources>
